option java_package = "edu.uiuc.groupmessage";
option java_outer_classname = "GroupMessageProtos";

message Member {
  required string ip = 1;
  required int32 port = 2;
  optional int32 timestamp = 3;
}

message GroupMessage {
  required Member target = 1;
  enum Action {
    JOIN_REQUEST = 0;
    RESET_MEMBERLIST = 1;
    TARGET_JOINS = 2;
    TARGET_LEAVES = 3;
    TARGET_FAILS = 4;
    TARGET_HEARTBEATS = 5;
    PUT_FILE = 6;
    GET_FILE = 7;
    DELETE_FILE = 8;
    FILE_OK = 9;
    FILE_ERROR = 10;
  }
  required Action action = 2 [default = TARGET_HEARTBEATS];
  repeated Member member = 3;
  optional bytes file_content = 4;
  optional string file_name = 5;
}
